<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- 流量管家标题 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_border"
        android:orientation="horizontal"
        android:padding="0dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/trafficmanager_title_string"
            android:textColor="#FFFFFE"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/traffic_settingBtn_layout"
            android:layout_width="43dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="1dp"
            android:background="@drawable/listview_selector"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/traffic_settingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_selector" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_toLeftOf="@+id/traffic_settingBtn_layout"
            android:background="@drawable/top_verticalbar" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#E4E9F2"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="237dp"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <!-- 环形进度仪表 -->

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/circlepbar_bg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/progress_bg_gray" />

                    <com.archermind.callstat.home.views.ArcBar
                        android:id="@+id/trafficprogressbar"
                        android:layout_width="173dp"
                        android:layout_height="173dp"
                        android:layout_centerInParent="true" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/circlepbar_top_bg" >

                        <RelativeLayout
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:layout_centerInParent="true" >

                            <TextView
                                android:id="@+id/trafficmanager_centerString"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_above="@+id/trafficmanager_remain"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="5dp"
                                android:text="@string/trafficmanager_remain_string"
                                android:textColor="#5B7EB8"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <ProgressBar
                                android:id="@+id/tProgressBar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="6dp"
                                android:indeterminateDrawable="@drawable/loading_spinner" >
                            </ProgressBar>

                            <TextView
                                android:id="@+id/trafficmanager_remain"
                                android:layout_width="wrap_content"
                                android:layout_height="32dp"
                                android:layout_centerInParent="true"
                                android:text="100"
                                android:textColor="#40931B"
                                android:textSize="23sp" />

                            <Button
                                android:id="@+id/trafficmanager_checkbtn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="5dp"
                                android:background="@drawable/traffic_check_selector" />
                        </RelativeLayout>
                    </RelativeLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <!-- 已用 -->

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" >

                        <ImageView
                            android:id="@+id/imageview1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:src="@drawable/gary" />

                        <TextView
                            android:id="@+id/textview1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/imageview1"
                            android:text="@string/trafficmanager_used_string"
                            android:textColor="#4F6486"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/traffic_budget_used"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:layout_toRightOf="@+id/textview1"
                            android:text="40元"
                            android:textColor="#4F6486"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <!-- 套餐 -->

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" >

                        <ImageView
                            android:id="@+id/traffic_icon_change"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:src="@drawable/green" />

                        <TextView
                            android:id="@+id/traffic_string_change"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/traffic_icon_change"
                            android:text="@string/trafficmanager_budget_string"
                            android:textColor="#4F6486"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/traffic_budget_remain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:layout_toRightOf="@+id/traffic_string_change"
                            android:text="120元"
                            android:textColor="#4F6486"
                            android:textSize="14sp" />
                    </RelativeLayout>
                    <!-- 套餐超出 -->

                    <RelativeLayout
                        android:id="@+id/beyond_rl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:visibility="gone" >

                        <ImageView
                            android:id="@+id/traffic_icon_beyond"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:src="@drawable/red" />

                        <TextView
                            android:id="@+id/traffic_string_beyond"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/traffic_icon_beyond"
                            android:text="@string/callsmanager_budgetout_string"
                            android:textColor="#4F6486"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/traffic_budget_beyond"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:layout_toRightOf="@+id/traffic_string_beyond"
                            android:text="120M"
                            android:textColor="#4F6486"
                            android:textSize="14sp" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- 流量 -->

            <RelativeLayout
                android:id="@+id/traffic_details_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true" >

                <TextView
                    android:id="@+id/traffic_detail_imageBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/traffic_ranking"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:padding="0dp" />

                <TextView
                    android:id="@+id/arrow_rightBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/arrow_right"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="3dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/callsmanager_used_info_traffic"
                        android:textColor="#4f6486"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/traffic_the_day_of_month_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textColor="#4f6486"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/traffic_the_day_of_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_toRightOf="@+id/traffic_the_day_of_month_title"
                        android:textColor="#4f6486"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/traffic_the_day_of_spent_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_toRightOf="@+id/traffic_the_day_of_month_title"
                        android:textColor="#4f6486"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/traffic_the_day_of_spent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_toRightOf="@+id/traffic_the_day_of_spent_title"
                        android:textColor="#4f6486"
                        android:textSize="12sp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/chartView_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <!--
                    <com.archermind.callstat.home.views.ChartView
                    android:id="@+id/traffic_chartArea"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp" />
                    -->
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>